hphp/hack/test/typecheck/hh_expect.php.exp
File "hh_expect.php", line 6, characters 22-23:
Invalid argument (Typing[4110])
  File "hh_expect.php", line 6, characters 13-19:
  Expected `nothing`
  File "hh_single_type_check_magic.hhi", line 4, characters 97-97:
    via this generic `T`
  File "hh_expect.php", line 3, characters 12-14:
  But got `int`
File "hh_expect.php", line 7, characters 21-22:
Invalid argument (Typing[4110])
  File "hh_expect.php", line 7, characters 13-18:
  Expected `string`
  File "hh_single_type_check_magic.hhi", line 4, characters 97-97:
    via this generic `T`
  File "hh_expect.php", line 3, characters 12-14:
  But got `int`
File "hh_expect.php", line 12, characters 33-34:
Invalid argument (Typing[4110])
  File "hh_expect.php", line 12, characters 24-30:
  Expected `nothing`
  File "hh_single_type_check_magic.hhi", line 5, characters 86-86:
    via this generic `T`
  File "hh_expect.php", line 3, characters 12-14:
  But got `int`
File "hh_expect.php", line 13, characters 32-33:
Invalid argument (Typing[4110])
  File "hh_expect.php", line 13, characters 24-29:
  Expected `string`
  File "hh_single_type_check_magic.hhi", line 5, characters 86-86:
    via this generic `T`
  File "hh_expect.php", line 3, characters 12-14:
  But got `int`
File "hh_expect.php", line 11, characters 3-33:
hh_expect_equivalent type mismatch (Typing[4452])
  File "hh_expect.php", line 3, characters 12-14:
  Expected `int`
  File "hh_expect.php", line 11, characters 24-28:
  But got `mixed`
File "hh_expect.php", line 12, characters 3-35:
hh_expect_equivalent type mismatch (Typing[4452])
  File "hh_expect.php", line 12, characters 24-30:
  Expected `nothing`
  File "hh_expect.php", line 3, characters 12-14:
  But got `int`
File "hh_expect.php", line 13, characters 3-34:
hh_expect_equivalent type mismatch (Typing[4452])
  File "hh_expect.php", line 13, characters 24-29:
  Expected `string`
  File "hh_expect.php", line 3, characters 12-14:
  But got `int`
File "hh_expect.php", line 6, characters 3-24:
hh_expect type mismatch (Typing[4453])
  File "hh_expect.php", line 6, characters 13-19:
  Expected `nothing`
  File "hh_expect.php", line 3, characters 12-14:
  But got `int`
File "hh_expect.php", line 7, characters 3-23:
hh_expect type mismatch (Typing[4453])
  File "hh_expect.php", line 7, characters 13-18:
  Expected `string`
  File "hh_expect.php", line 3, characters 12-14:
  But got `int`
